# PrimEvil

./: README.md  build.gradle.kts  detekt.yml  settings.gradle.kts
.hooks/: pre-commit
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/se/fzy/primevil/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/se/fzy/primevil/: MainActivity.kt  Primer.kt  VibrationCompat.kt
app/src/main/java/se/fzy/primevil/primer/: Native.kt  PrimerOld.kt
app/src/main/java/se/fzy/primevil/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/se/fzy/primevil/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
primer/: Cargo.toml
primer/benches/: primer_bench.rs
primer/src/: lib.rs  primer.rs
primer/src/queue/: dao.rs  mod.rs  prio_queue.rs  storage_backed_i64_priority_queue.rs
primer/src/storage/: mod.rs  sqlite_prio_queue_dao.rs
